// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assetParser.js correctly parsers asset 1`] = `
Object {
  "contentType": "image/png",
  "description": "A Nyan Cat",
  "filename": "Nyan_cat_250px_frame.png",
  "height": 250,
  "size": 12273,
  "title": "Nyan Cat",
  "url": "//images.ctfassets.net/yadj1kx9rmg0/4gp6taAwW4CmSgumq2ekUm/9da0cd1936871b8d72343e895a00d611/Nyan_cat_250px_frame.png",
  "width": 250,
}
`;

exports[`assetParser.js removes undefined values 1`] = `
Object {
  "contentType": "image/png",
  "filename": "Nyan_cat_250px_frame.png",
  "height": 250,
  "size": 12273,
  "title": "Nyan Cat",
  "url": "//images.ctfassets.net/yadj1kx9rmg0/4gp6taAwW4CmSgumq2ekUm/9da0cd1936871b8d72343e895a00d611/Nyan_cat_250px_frame.png",
  "width": 250,
}
`;
